# simple_pdf_editor

./: .gitignore  CMakeLists.txt  index.html
include/: FileManager.h
src/: FileManager.cpp  main.cpp
