cmake_minimum_required(VERSION 3.10)

project(SimplePdfServer)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

find_package(Threads REQUIRED)
include_directories(include)

add_executable(server_app src/main.cpp src/FileManager.cpp)

target_link_libraries(server_app Threads::Threads)
